[tool.poetry]
name = "smsdrop-python"
version = "0.1.0"
description = "A python sdk for the smsdrop.net platform"
authors = ["Tobi DEGNON <tobidegnon@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tobi-De/smsdrop-python"
keywords = [
    "Sdk",
    "Sms",
    "Api",
    "Smsdrop",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.18.2"
mkdocs-material = "^7.1.8"
mkdocstrings = "^0.15.2"
mkdocs-material-extensions = "^1.0.1"
mkdocs = "^1.2.1"
mkdocs-include-markdown-plugin = "^3.1.4"
redis = "^3.5.3"
tenacity = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.902"
flake8 = "^3.9.2"
isort = "^5.8.0"
python-dotenv = "^0.17.1"
bpython = "^0.21"
pytz = "^2021.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
